--- a/configurations/TOI-4504_fitb.ini
+++ b/configurations/TOI-4504_fitb.ini
@@ -22,24 +22,24 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/TOI-4504_fitb.json  # <string> simulation results like transit times are saved in this file
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
-;verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+comment = try to hit planet b t0=2459038.458  # You can use this comment for example as diagram title in your result plots
+verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 100                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2460862]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [100]               # [s] <float> real time differences between simulation iterations inside each intervall
+ends =   [2459039]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [1000]            # [s] <float> real time differences between simulation iterations inside each intervall
 ;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ;dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
@@ -60,14 +60,14 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
 walkers = 2000               # Number of mcmc chains
 burn_in = 2000               # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
-chunk_size = 400             # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 500             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 thin_samples = 50            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -138,6 +138,8 @@ P =         2.42614 * day
 Omega =     0
 omega =     90
 ma =        303.2719   # fits t0=2459038.458 from Vitkova paper
+;T =         0
+;t =         3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
