--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -60,7 +60,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-;flux_file = ../data/TOI-4504/TOI4504_transits_sm0.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
@@ -126,18 +126,18 @@ limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
 
-;[TOI-4504b]
-;body_type = planet
-;primary =   TOI-4504
-;color =     0.99, 0.01, 0.01
-;mass =      10.4 * m_earth
-;radius =    2.691 * r_earth
-;e =         0.0
-;i =         87.4
-;P =         2.42614 * day
-;Omega =     0
-;omega =     90
-;ma =        303.2719   # fits t0=2459038.458 from Vitkova paper
+[TOI-4504b]
+body_type = planet
+primary =   TOI-4504
+color =     0.99, 0.01, 0.01
+mass =      10.4 * m_earth
+radius =    2.691 * r_earth
+e =         0.0
+i =         87.4
+P =         2.42614 * day
+Omega =     0
+omega =     90
+ma =        303.2719   # fits t0=2459038.458 from Vitkova paper
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
