--- a/configurations/TOI-4504_mcmc_b.ini
+++ b/configurations/TOI-4504_mcmc_b.ini
@@ -138,7 +138,7 @@ i =         87.4,              85.0,             90.0,              2
 P =         2.42614 * day,     2.425 * day,      2.427 * day,       0.0002 * day
 Omega =     0
 omega =     90
-ma =        303.2719           293               313                5               # fits t0=2459038.458 from Vitkova paper
+ma =        303.2719,          293,              313,               5               # fits t0=2459038.458 from Vitkova paper
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
