--- a/configurations/TOI-4504_mcmc_b.ini
+++ b/configurations/TOI-4504_mcmc_b.ini
@@ -64,15 +64,15 @@ flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 fitting_results_directory = ../results/mcmc
-walkers = 32#2000               # Number of mcmc chains
+walkers = 200               # Number of mcmc chains
 burn_in = 1#2000               # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 chunk_size = 100#400             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 thin_samples = 10#50            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
+unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
                              # Specify for each of the above body parameters its unit to be used in mcmc result plots
-scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
+scale = {"mass": 1/m_earth, "radius": 1/r_earth, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
                              # Specify for each of the above body parameters the value it has
                              # to be multiplied with in order to represent its above specified unit.
 
@@ -131,14 +131,14 @@ limb_darkening_parameter_type = q
 body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth,    7.0 * m_earth,    15.0 * m_earth,    10 * m_earth,
-radius =    2.691 * r_earth,   2.3 * r_earth,    3.1 * r_earth,     0.2 * r_earth,
+mass =      10.4 * m_earth,    1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
+radius =    2.691 * r_earth,   1.0 * r_earth,    5.0 * r_earth,     2.0 * r_earth
 e =         0.0
-i =         87.4,              85.0,             90.0,              2
-P =         2.42614 * day,     2.425 * day,      2.427 * day,       0.0002 * day
+i =         87.4,              84.0,             89.0,              1.5
+P =         2.42614 * day,     2.426 * day,      2.4263 * day,      0.00005 * day
 Omega =     0
 omega =     90
-ma =        303.2719,          293,              313,               5               # fits t0=2459038.458 from Vitkova paper
+ma =        303.2719,          301.25,           306.25,            1                 # fits t0=2459038.458 from Vitkova paper
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
