--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -22,24 +22,24 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_fitb.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/TOI-4504_mcmc_b.json  # <string> simulation results like transit times are saved in this file
 result_dt = 100              # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = try to hit planet b t0=2459038.458  # You can use this comment for example as diagram title in your result plots
-verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+comment = params as in Vitkova paper  # You can use this comment for example as diagram title in your result plots
+;verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 100                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2459039]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [1000]            # [s] <float> real time differences between simulation iterations inside each intervall
+ends =   [2458862]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [100]               # [s] <float> real time differences between simulation iterations inside each intervall
 ;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ;dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
@@ -60,16 +60,20 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
-;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
+rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
+rv_offset = 2064.7
 fitting_results_directory = ../results/mcmc
-walkers = 2000               # Number of mcmc chains
-burn_in = 2000               # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 2000                # Number of mcmc chains
+burn_in = 1#000               # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
-chunk_size = 500             # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 100            # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
-thin_samples = 50            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+thin_samples = 10#50         # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
                              # Specify for each of the above body parameters its unit to be used in mcmc result plots
 scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
@@ -127,46 +131,45 @@ limb_darkening_parameter_type = q
 
 
 [TOI-4504b]
+#           value               lower bound       upper bound        sigma
 body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth
-radius =    2.691 * r_earth
-e =         0.0
-i =         87.4
-P =         2.42614 * day
+mass =      10.4 * m_earth,   #  1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
+radius =    2.691 * r_earth,  #  0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
+e =         0
+i =         86.5,             #  84.0,             89.0,              1.5
+P =         2.42614 * day,    #  2.426 * day,      2.4263 * day,      0.00005 * day
 Omega =     0
 omega =     90
-ma =        303.2719   # fits t0=2459038.458 from Vitkova paper
-;T =         0
-;t =         3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
+ma =        303.6,            #  301.25,           306.25,            1
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
 body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
-#           value              lower bound    upper bound    sigma
-mass =      1.4166 * m_jup,    1.1 * m_jup,   1.7 * m_jup,   0.15 * m_jup
-radius =    1.012 * r_jup,     0.5 * r_jup,   1.5 * r_jup,   0.5 * r_jup
-e =         0.0445,            0.0,           0.12,          0.025
-i =         88.8,              86.5,          89.5,          0.5
-P =         40.986 * day,      40.3 * day,    41.7 * day,    0.2 * day
-Omega =     0,                 -15,           15,            3
-omega =     93.5,              75,            120,           10
-ma =        280,               260,           310,           12
-
-
-[TOI-4504c]
-body_type = planet
-primary =   TOI-4504
-color =     0.99, 0.99, 0.01
-#           value              lower bound    upper bound    sigma
-mass =      3.7672 * m_jup,    3.0 * m_jup,   4.5 * m_jup,   0.25 * m_jup
-radius =    0.9897 * r_jup,    0.8 * r_jup,   1.2 * r_jup,   0.07 * r_jup
-e =         0.0320,            0.0,           0.07,          0.015
-i =         89.69,             89.25,         90.0,          0.15
-P =         82.5438 * day,     82 * day,      83.3 * day,    0.2 * day
-Omega =     0.8,             # -15,           15,            3
-omega =     270.9,             255,           285,           5
-ma =        173.1,             165,           190,           5
+#           value               lower bound       upper bound        sigma
+mass =      1.4166 * m_jup,     1.1 * m_jup,      1.7 * m_jup,       0.15 * m_jup
+radius =    1.012 * r_jup,      0.5 * r_jup,      1.5 * r_jup,       0.5 * r_jup
+e =         0.0445,             0.0,              0.12,              0.025
+i =         88.8,               86.5,             89.5,              0.5
+P =         40.986 * day,       40.3 * day,       41.7 * day,        0.2 * day
+Omega =     0,                  -15,              15,                3
+omega =     93.5,               75,               120,               10
+ma =        280,                260,              310,               12
+    
+    
+[TOI-4504c]    
+body_type = planet    
+primary =   TOI-4504    
+color =     0.99, 0.99, 0.01    
+#           value               lower bound       upper bound        sigma
+mass =      3.7672 * m_jup,     3.0 * m_jup,      4.5 * m_jup,       0.25 * m_jup
+radius =    0.9897 * r_jup,     0.8 * r_jup,      1.2 * r_jup,       0.07 * r_jup
+e =         0.0320,             0.0,              0.07,              0.015
+i =         89.69,              89.25,            90.0,              0.15
+P =         82.5438 * day,      82 * day,         83.3 * day,        0.2 * day
+Omega =     0.8,              #  -15,              15,                3
+omega =     270.9,              255,              285,               5
+ma =        173.1,              165,              190,               5
