--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -61,19 +61,22 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
 ;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
-flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
-;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
-rv_offset = 2064.7
-fitting_results_directory = ../results/mcmc
-walkers = 32                # Number of mcmc chains
-burn_in = 25#000               # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
+fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
+walkers = 32                 # Number of mcmc chains
+burn_in = 1#000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
-chunk_size = 60            # Every chunk_size steps after burn-in phase, results will be saved.
-bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
+moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
+;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
+
 thin_samples = 10#50         # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 30            # Every chunk_size steps after burn-in phase, results will be saved.
+bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
                              # Specify for each of the above body parameters its unit to be used in mcmc result plots
 scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
@@ -135,14 +138,14 @@ limb_darkening_parameter_type = q
 body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth,   #  1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
-radius =    2.691 * r_earth,  #  0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
+mass =      10.4 * m_earth,     1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
+radius =    2.691 * r_earth,    0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
 e =         0
-i =         86.5,             #  84.0,             89.0,              1.5
-P =         2.42614 * day,    #  2.426 * day,      2.4263 * day,      0.00005 * day
+i =         86.5,               84.0,             89.0,              1.5
+P =         2.42614 * day,      2.426 * day,      2.4263 * day,      0.00005 * day
 Omega =     0
 omega =     90
-ma =        303.6,            #  301.25,           306.25,            1
+ma =        303.6,              301.25,           306.25,            1
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
@@ -150,14 +153,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     1.1 * m_jup,      1.7 * m_jup,       0.15 * m_jup
-radius =    1.012 * r_jup,      0.5 * r_jup,      1.5 * r_jup,       0.5 * r_jup
-e =         0.0445,             0.0,              0.12,              0.025
-i =         88.8,               86.5,             89.5,              0.5
-P =         40.986 * day,       40.3 * day,       41.7 * day,        0.2 * day
-Omega =     0,                  -15,              15,                3
-omega =     93.5,               75,               120,               10
-ma =        280,                260,              310,               12
+mass =      1.4166 * m_jup,   #  1.1 * m_jup,      1.7 * m_jup,       0.15 * m_jup
+radius =    1.012 * r_jup,    #  0.5 * r_jup,      1.5 * r_jup,       0.5 * r_jup
+e =         0.0445,           #  0.0,              0.12,              0.025
+i =         88.8,             #  86.5,             89.5,              0.5
+P =         40.986 * day,     #  40.3 * day,       41.7 * day,        0.2 * day
+Omega =     0,                #  -15,              15,                3
+omega =     93.5,             #  75,               120,               10
+ma =        280,              #  260,              310,               12
     
     
 [TOI-4504c]    
@@ -165,11 +168,11 @@ body_type = planet
 primary =   TOI-4504    
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     3.0 * m_jup,      4.5 * m_jup,       0.25 * m_jup
-radius =    0.9897 * r_jup,     0.8 * r_jup,      1.2 * r_jup,       0.07 * r_jup
-e =         0.0320,             0.0,              0.07,              0.015
-i =         89.69,              89.25,            90.0,              0.15
-P =         82.5438 * day,      82 * day,         83.3 * day,        0.2 * day
-Omega =     0.8,              #  -15,              15,                3
-omega =     270.9,              255,              285,               5
-ma =        173.1,              165,              190,               5
+mass =      3.7672 * m_jup,   #  3.0 * m_jup,      4.5 * m_jup,       0.25 * m_jup
+radius =    0.9897 * r_jup,   #  0.8 * r_jup,      1.2 * r_jup,       0.07 * r_jup
+e =         0.0320,           #  0.0,              0.07,              0.015
+i =         89.69,            #  89.25,            90.0,              0.15
+P =         82.5438 * day,    #  82 * day,         83.3 * day,        0.2 * day
+Omega =     0.8,              ##  -15,              15,                3
+omega =     270.9,            #  255,              285,               5
+ma =        173.1,            #  165,              190,               5
