--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -67,7 +67,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
-rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
+;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
 
 tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
