--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -38,12 +38,12 @@ dt = 10000                   # [s] <float> real time difference between simulati
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-starts = [2458400]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2458862]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [10000]               # [s] <float> real time differences between simulation iterations inside each intervall
-;starts = [2458400.0, 2460472.0]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458501.0, 2460473.0]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;dts =    [120, 120]               # [s] <float> real time differences between simulation iterations inside each intervall
+starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800]  # [s] <float> real time differences between simulation iterations inside each intervall
+;starts = [2458400]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
+;ends =   [2458862]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+;dts =    [10000]               # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -148,14 +148,14 @@ limb_darkening_parameter_type = q
 body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth,     1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
-radius =    2.691 * r_earth,    0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
+mass =      10.4 * m_earth,   #  1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
+radius =    2.691 * r_earth,  #  0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
 e =         0
-i =         86.5,               84.0,             89.0,              1.5
-P =         2.42614 * day,      2.426 * day,      2.4263 * day,      0.00005 * day
+i =         86.5,             #  84.0,             89.0,              1.5
+P =         2.42614 * day,    #  2.426 * day,      2.4263 * day,      0.00005 * day
 Omega =     0
 omega =     90
-ma =        303.6,              301.25,           306.25,            1
+ma =        303.6,            #  301.25,           306.25,            1
 
 
 [TOI-4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
@@ -163,14 +163,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,   #  1.1 * m_jup,      1.7 * m_jup,       0.15 * m_jup
-radius =    1.012 * r_jup,    #  0.5 * r_jup,      1.5 * r_jup,       0.5 * r_jup
-e =         0.0445,           #  0.0,              0.12,              0.025
-i =         88.8,             #  86.5,             89.5,              0.5
-P =         40.986 * day,     #  40.3 * day,       41.7 * day,        0.2 * day
-Omega =     0,                #  -15,              15,                3
-omega =     93.5,             #  75,               120,               10
-ma =        280,              #  260,              310,               12
+mass =      1.4166 * m_jup,     1.1 * m_jup,      1.7 * m_jup,       0.15 * m_jup
+radius =    1.012 * r_jup,      0.5 * r_jup,      1.5 * r_jup,       0.5 * r_jup
+e =         0.0445,             0.0,              0.12,              0.025
+i =         88.8,               86.5,             89.5,              0.5
+P =         40.986 * day,       40.3 * day,       41.7 * day,        0.2 * day
+Omega =     0,                  -15,              15,                3
+omega =     93.5,               75,               120,               10
+ma =        280,                260,              310,               12
     
     
 [TOI-4504c]    
@@ -178,11 +178,11 @@ body_type = planet
 primary =   TOI-4504    
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,   #  3.0 * m_jup,      4.5 * m_jup,       0.25 * m_jup
-radius =    0.9897 * r_jup,   #  0.8 * r_jup,      1.2 * r_jup,       0.07 * r_jup
-e =         0.0320,           #  0.0,              0.07,              0.015
-i =         89.69,            #  89.25,            90.0,              0.15
-P =         82.5438 * day,    #  82 * day,         83.3 * day,        0.2 * day
-Omega =     0.8,              ##  -15,              15,                3
-omega =     270.9,            #  255,              285,               5
-ma =        173.1,            #  165,              190,               5
+mass =      3.7672 * m_jup,     3.0 * m_jup,      4.5 * m_jup,       0.25 * m_jup
+radius =    0.9897 * r_jup,     0.8 * r_jup,      1.2 * r_jup,       0.07 * r_jup
+e =         0.0320,             0.0,              0.07,              0.015
+i =         89.69,              89.25,            90.0,              0.15
+P =         82.5438 * day,      82 * day,         83.3 * day,        0.2 * day
+Omega =     0.8,              #  -15,              15,                3
+omega =     270.9,              255,              285,               5
+ma =        173.1,              165,              190,               5
