--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -32,7 +32,7 @@ comment = params as in Vitkova paper  # You can use this comment for example as 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 10000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 5000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -40,7 +40,7 @@ dt = 10000                   # [s] <float> real time difference between simulati
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800, 1800]  # [s] <float> real time differences between simulation iterations inside each intervall
+dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
 ;starts = [2458400]         # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ;ends =   [2458862]         # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ;dts =    [10000]               # [s] <float> real time differences between simulation iterations inside each intervall
@@ -74,6 +74,8 @@ tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (r
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers = TOI-4504c, TOI-4504d  # only primary transits by these bodies are relevant when fitting for TT
 eclipsees = TOI-4504              # only transits eclipsing these bodies are relevant when fitting for TT
+target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
+                     # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 walkers = 32                 # Number of mcmc chains
@@ -83,7 +85,7 @@ moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing th
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
 thin_samples = 10            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 35              # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 10              # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
