--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -88,7 +88,7 @@ moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing th
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
 thin_samples = 10            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 30              # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 10              # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -169,7 +169,7 @@ primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      1.4166 * m_jup,     0.5 * m_jup,      2.9 * m_jup,       0.5 * m_jup
-radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
+radius =    1.012 * r_jup,    #  0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.0445,             0.0,              0.12,              0.035
 ;i =         89.5,               89.0,             89.9,              0.5
 i =         88.8,               86.5,             89.5,              0.5
@@ -185,7 +185,7 @@ primary =   TOI-4504
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
 mass =      3.7672 * m_jup,     2.5 * m_jup,      5.0 * m_jup,       0.5 * m_jup
-radius =    0.9897 * r_jup,     0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
+radius =    0.9897 * r_jup,   #  0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.0320,             0.0,              0.09,              0.025
 i =         89.69,              89.25,            90.0,              0.15
 P =         82.5438 * day,      82 * day,         83.3 * day,        0.2 * day
