--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -75,20 +75,20 @@ rv_offset = 2064.7           # Estimate of the velocity measurement that corresp
 tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_first_last_only.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
-eclipsers = TOI-4504c, TOI-4504d  # only primary transits by these bodies are relevant when fitting for TT
-eclipsees = TOI-4504              # only transits eclipsing these bodies are relevant when fitting for TT
+eclipsers_names = TOI-4504c, TOI-4504d  # only primary transits by these bodies are relevant when fitting for TT
+eclipsees_names = TOI-4504              # only transits eclipsing these bodies are relevant when fitting for TT
 target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 200                 # Number of mcmc chains
-burn_in = 3000                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 22                 # Number of mcmc chains
+burn_in = 1                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
-thin_samples = 30            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 200              # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 1              # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -175,7 +175,7 @@ i =         88.8,             #  86.5,             89.5,              0.5
 P =         40.986 * day,       39.7 * day,       41.7 * day,        0.4 * day
 Omega =     0,                  -15,              15,                8
 omega =     93.5,               75,               135,               20
-ma =        280,                230,              330,               20
+ma =        280,                180,              359.99,               20
     
     
 [TOI-4504c]    
@@ -183,11 +183,11 @@ body_type = planet
 primary =   TOI-4504    
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
+mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
 radius =    0.9897 * r_jup,   #  0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.09,              0.025
+e =         0.0320,             0.0,              0.10,              0.025
 i =         89.69,            #  89.25,            90.0,              0.15
 P =         82.5438 * day,      82 * day,         83.7 * day,        0.2 * day
 Omega =     0.8,              #  -15,              15,                3
-omega =     270.9,              240,              300,               20
-ma =        173.1,              150,              200,               20
+omega =     270.9,              180,              359.99,            20
+ma =        173.1,              0,                359.99,            20
